# selenium

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  test_validation.py
templates/: index.html
